fix: Correct Object.class comparison in MoreReflection
Replace Object.class.equals(type.getClass()) with Object.class.equals(type)
in resolveField and extractAllAnnotations methods. The original comparison
was always false since type.getClass() returns Class<Class<?>> while
Object.class is Class<Object>.

Also includes automatic code formatting changes from pre-commit hooks.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>