@@ -152,19 +152,19 @@ class SplitterTest {
         var splitter = new Splitter(config);
         var result = splitter.splitToList("a.b.c");
         assertEquals(3, result.size());
-        assertEquals("a", result.get(0));
+        assertEquals("a", result.getFirst());
         assertEquals("b", result.get(1));
         assertEquals("c", result.get(2));
     }
 
-    @Test 
+    @Test
     void shouldHandleNullElementsInResults() {
         // This tests the null element handling in addIfApplicable (line 316)
         var splitter = Splitter.on(",").omitEmptyStrings();
         var result = splitter.splitToList("a,,b"); // Empty string becomes null in some cases
         // The empty element should be omitted, so we get 2 elements
         assertEquals(2, result.size());
-        assertEquals("a", result.get(0));
+        assertEquals("a", result.getFirst());
         assertEquals("b", result.get(1));
     }
 
